testcases/error/missing_clock_domain.veryl
module missing_clock_domain {
    let _a: clock = 1;
    let _b: clock = 1;
}
